<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HttpTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="param">Upload Paramaters</string>
    <string name="image">Upload Image</string>
    <string name="response">Responses</string>
    <string name="upload">UPLOAD</string>
    <string name="default_response">Waiting for Response..</string>

</resources>